# bootcam-config-timi

./: pyproject.toml
.github/workflows/: deploy-bootstrap-cli.yaml  deploy-extpipes-cli.yaml  deploy-tranformations.yml
config/bootstrap/: bootstrap-cli-config.yml
config/extpipes/: extpipes-cli-config.yml
config/transformations/create_asset_hierarchy/: manifest.yaml  transformation.sql
config/transformations/ts_assets_mapping/: manifest.yaml  transformation.sql
grafana/: grafana.json
